added ID Tags to Nav section

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
      <!-- Navigation Bar-->
         <div class="navBar">
             <div id="navItems">
-                
+
              <!--Left Side Name-->
               <div id="myName">Jeff McLean</div>
 
              <!--Right Side Links-->
               <nav>
-                <a href="index.html" alt="About Page">About</a> |
-                <a href="portfolio.html" alt="Portfolio Page">Portfolio</a> |
-                <a href="contact.html" alt="Contact Page">Contact</a>
+                <a id="navLeft" href="index.html" alt="About Page">About</a> |
+                <a id="navMid" href="portfolio.html" alt="Portfolio Page">Portfolio</a> |
+                <a id="navRight" href="contact.html" alt="Contact Page">Contact</a>
               </nav>
 
             </div>
