--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 
             <!-- Text & Image-->
                <img id="selfie" src="assets/images/Jeff_McLean.PNG" alt="Self Portrait">
-               <p id="aboutMe">My name is Jeffrey McLean, I am from the Boston area originally, so naturally I live by the 3 B's ... Bird, Belichick, Brady.... but am now a permanent resident of Encinitas, CA. 
+               <p>My name is Jeffrey McLean, I am from the Boston area originally, so naturally I live by the 3 B's ... Bird, Belichick, Brady.... but am now a permanent resident of Encinitas, CA. </p>
 
-                    I love digital marketing. I love helping people and brands with their digital marketing. Whether you need a Website Developed, someone to run your Paid Search campaigns, a new set of eyes on your Social Media Marketing, or want to start running Paid Social ads for your business, I can do it all. Don't know what you need? I would love to sit down with you as a Digital Consultant and help you put together a strategy.
+                <p>I love digital marketing. I love helping people and brands with their digital marketing. Whether you need a Website Developed, someone to run your Paid Search campaigns, a new set of eyes on your Social Media Marketing, or want to start running Paid Social ads for your business, I can do it all. Don't know what you need? I would love to sit down with you as a Digital Consultant and help you put together a strategy.</p>
                     
-                    Feel free to reach out here on LinkedIn, at my website below, or through email: jeff@jeffreymclean.com
-                    http://JeffreyMcLean.com </p>
+                <p>Feel free to reach out here on LinkedIn, at my website below, or through email: jeff@jeffreymclean.com</p>
+                <p>http://JeffreyMcLean.com </p>
         </div>  
 
     </div>
