--- a/portfolio.html
+++ b/portfolio.html
@@ -47,15 +47,31 @@
             <!-- Portfolio Area-->
             <table>
                     <tr id="row1">
-                        <td><img src="http://fpoimg.com/300x300?text=Advertisement"> </td>
-                        <td><img src="http://fpoimg.com/300x300?text=Advertisement"></td>
+                        <td class="cellBlock">
+                            <img src="http://fpoimg.com/300x300?text=Advertisement">
+                                <div class="textOverlay">Example Item</div>
+                        </td>
+                        <td class="cellBlock">
+                                <img src="http://fpoimg.com/300x300?text=Advertisement">
+                                    <div class="textOverlay">Example Item 2</div>
+                            </td>
+                        <td></td>
                     </tr>
                     <tr id="row2">
-                        <td><img src="http://fpoimg.com/300x300?text=Advertisement"></td>
-                        <td><img src="http://fpoimg.com/300x300?text=Advertisement"></td>
+                        <td class="cellBlock">
+                                <img src="http://fpoimg.com/300x300?text=Advertisement">
+                                    <div class="textOverlay">Example Item 3</div>
+                         </td>
+                        <td class="cellBlock">
+                                <img src="http://fpoimg.com/300x300?text=Advertisement">
+                                    <div class="textOverlay">Example Item 4</div>
+                         </td>
                     </tr>
                     <tr id="row3">
-                        <td><img src="http://fpoimg.com/300x300?text=Advertisement"></td>
+                        <td class="cellBlock">
+                                <img src="http://fpoimg.com/300x300?text=Advertisement">
+                                    <div class="textOverlay">Example Item 5</div>
+                        </td>
                     </tr>
                     
             </table>  
