added ID tags to portfolio images, so can add shadow styling

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,28 +48,28 @@
             <table>
                     <tr id="row1">
                         <td class="cellBlock">
-                            <img src="http://fpoimg.com/300x300?text=Advertisement">
+                            <img id="porfolioItem" src="http://fpoimg.com/300x300?text=Advertisement">
                                 <div class="textOverlay">Example Item</div>
                         </td>
                         <td class="cellBlock">
-                                <img src="http://fpoimg.com/300x300?text=Advertisement">
+                                <img id="porfolioItem" src="http://fpoimg.com/300x300?text=Advertisement">
                                     <div class="textOverlay">Example Item 2</div>
                             </td>
                         <td></td>
                     </tr>
                     <tr id="row2">
                         <td class="cellBlock">
-                                <img src="http://fpoimg.com/300x300?text=Advertisement">
+                                <img id="porfolioItem" src="http://fpoimg.com/300x300?text=Advertisement">
                                     <div class="textOverlay">Example Item 3</div>
                          </td>
                         <td class="cellBlock">
-                                <img src="http://fpoimg.com/300x300?text=Advertisement">
+                                <img id="porfolioItem" src="http://fpoimg.com/300x300?text=Advertisement">
                                     <div class="textOverlay">Example Item 4</div>
                          </td>
                     </tr>
                     <tr id="row3">
                         <td class="cellBlock">
-                                <img src="http://fpoimg.com/300x300?text=Advertisement">
+                                <img id="porfolioItem" src="http://fpoimg.com/300x300?text=Advertisement">
                                     <div class="textOverlay">Example Item 5</div>
                         </td>
                     </tr>
