Add final style.css edits (image shadows) and cleand up notes. Project considered COMPLETE

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                <p>I love helping people, and brands, with their digital marketing. Whether you need: a Website Developed, someone to run your Paid Search campaigns, a new set of eyes on your Social Media Marketing, or want to start running Paid Social ads for your business. I can do it all.</p> 
                <p>Don't know what you need? I would love to sit down with you as a Digital Consultant and help you put together a strategy.</p>
                <p>Feel free to reach out via the contact page, on LinkedIn, at my website below, or through email: <a href="mailto:jeff@jeffreymclean.com">jeff@jeffreymclean.com</a></p>
-               <p><a href="http://JeffreyMcLean.com">JeffreyMclean.com</a> </p>
+               <p><a href="http://JeffreyMcLean.com" target="_blank">JeffreyMclean.com</a> </p>
 
                
 
